Articles dataTable + actions

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -4,7 +4,7 @@ $lightblue: #05aefb;
 $darkblue: #293644;
 $gray: #757575;
 $font-grey: #2c2b2b;
-$green: #4a8d4f;
+$green: #2a8130;
 $green2: #5cb19c;
 $vue-green: #41b883;
 
